# Bingo-CosmWasm

./: LICENSE  README.md
.github/workflows/: rust.yml
contracts/: Cargo.toml  build.sh  deploy.sh  instantiate.sh  interaction.sh
contracts/.cargo/: config
contracts/.github/workflows/: ci.yml
contracts/src/: contract.rs  lib.rs  msg.rs  state.rs
