[package]
name = "contracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.2.7", features = ["staking"] }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw-storage-plus = "1.1.0"
rand = "0.8.5"

[dev-dependencies]
cw-multi-test = "0.16.5"
